Add: Environment setup guide and example for faucet
- Add .env.example with all required variables
- Add SETUP_FAUCET_TH.md with detailed setup instructions
- Document WORLDCHAIN_RPC_URL and GAME_REWARD_DISTRIBUTOR_PRIVATE_KEY requirements
- Include troubleshooting and security notes

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,33 @@
-# World App Configuration (REQUIRED)
-NEXT_PUBLIC_WORLD_APP_ID=app_0ebc1640de72f393da01afc094665266
-NEXT_PUBLIC_WORLD_ACTION=luminexstaking
+# World Chain Network Configuration
+NEXT_PUBLIC_WALLET_RPC_URL=https://worldchain-mainnet.g.alchemy.com/public
+NEXT_PUBLIC_WALLET_CHAIN_ID=480
+NEXT_PUBLIC_CONTRACT_RPC_URL=https://worldchain-mainnet.g.alchemy.com/public
+NEXT_PUBLIC_CONTRACT_CHAIN_ID=480
+
+# Backend RPC URL (for server-side operations)
+WORLDCHAIN_RPC_URL=https://worldchain-mainnet.g.alchemy.com/public
 
 # Contract Addresses
+NEXT_PUBLIC_LUX_TOKEN=0x6289D5B756982bbc2535f345D9D68Cb50c853F35
 NEXT_PUBLIC_LUX_TOKEN_ADDRESS=0x6289D5B756982bbc2535f345D9D68Cb50c853F35
-NEXT_PUBLIC_STAKING_ADDRESS=
+NEXT_PUBLIC_STAKING_CONTRACT=0x50AB6B4C3a8f7377F424A0400CDc3724891A3103
+NEXT_PUBLIC_STAKING_ADDRESS=0x50AB6B4C3a8f7377F424A0400CDc3724891A3103
 NEXT_PUBLIC_TREASURY_ADDRESS=0xdc6c9ac4c8ced68c9d8760c501083cd94dcea4e8
 
-# Admin (Optional)
+# World App Configuration
+NEXT_PUBLIC_WORLD_APP_ID=app_0ebc1640de72f393da01afc094665266
+NEXT_PUBLIC_WORLD_ACTION=luminexstaking
+WORLD_API_KEY=your_world_api_key_here
+
+# Brand Configuration
+NEXT_PUBLIC_BRAND_NAME=Luminex
+
+# Admin Configuration
 NEXT_PUBLIC_ADMIN_WALLET_ADDRESS=0xdc6c9ac4c8ced68c9d8760c501083cd94dcea4e8
 
-# Branding
-NEXT_PUBLIC_LOGO_URL=https://i.postimg.cc/wvJqhSYW/Gemini-Generated-Image-ggu8gdggu8gdggu8-1.png
+# Game Reward Distributor Private Key (REQUIRED for faucet and game rewards)
+# This wallet must be authorized as gameRewardDistributor in the staking contract
+# IMPORTANT: Keep this secret! Never commit to git!
+GAME_REWARD_DISTRIBUTOR_PRIVATE_KEY=0x1234567890abcdef...
+# Alternative: Use PRIVATE_KEY if GAME_REWARD_DISTRIBUTOR_PRIVATE_KEY is not set
+# PRIVATE_KEY=0x1234567890abcdef...
